优化类库